# staticmap-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/staticmap_mcp/: server.py
tests/: test_server.py
